making restaurant list on tablet more responsive and fixing navigation bug

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -40,6 +40,7 @@
 	}
 
 	@media only screen and (min-width: $screen-md) {
-		max-width: $screen-md;
+		min-width: $screen-md;
+		max-width: $screen-md-max;
 	}
 }
