--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -31,6 +31,7 @@ $shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.25);
 // Breakpoints
 $screen-sm: 365px;
 $screen-md: 768px;
+$screen-md-max: 855px;
 
 // General
 $hover-opacity: 0.7;
